Works commenting much of code!!!

--- a/package.json
+++ b/package.json
@@ -3,37 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/react": "^15.0.11",
-    "@types/react-addons-create-fragment": "^0.14.14",
-    "axios": "^0.12.0",
-    "bootstrap": "^3.3.7",
-    "immutable": "^3.8.1",
-    "moment": "^2.15.2",
     "react": "^15.4.2",
-    "react-addons-create-fragment": "^15.3.2",
-    "react-addons-shallow-compare": "^15.3.2",
-    "react-autosuggest": "^7.0.1",
     "react-bootstrap": "^0.30.3",
-    "react-bootstrap-date-picker": "^4.0.0",
-    "react-dates": "^4.1.1",
     "react-dom": "^15.1.0",
-    "react-dropzone": "^3.7.3",
-    "react-modal": "^1.6.3",
-    "react-moment-proptypes": "^1.2.0",
-    "react-portal": "^3.0.0",
-    "react-radio-group": "^3.0.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
     "react-router-redux": "^4.0.5",
     "react-scripts": "1.0.14",
-    "react-star-rating": "^1.4.2",
-    "react-star-rating-component": "^1.2.2",
-    "react-tagsinput": "^3.13.6",
     "redux": "^3.5.2",
     "redux-devtools-extension": "^2.13.0",
     "redux-form": "^5.3.2",
-    "redux-thunk": "^2.1.0",
-    "superagent": "^3.2.1"
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
   },
