--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.12.0",
+    "moment": "2.18.1",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.3",
     "react-bootstrap-date-picker": "^4.0.0",
@@ -15,7 +16,8 @@
     "redux": "^3.5.2",
     "redux-devtools-extension": "^2.13.0",
     "redux-form": "^5.3.2",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "superagent": "^3.2.1"
   },
   "devDependencies": {
   },
