--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "axios": "^0.12.0",
     "moment": "2.18.1",
     "react": "^15.4.2",
+    "react-autosuggest": "^7.0.1",
     "react-bootstrap": "^0.30.3",
     "react-bootstrap-date-picker": "^4.0.0",
     "react-dom": "^15.1.0",
+    "react-dropzone": "^3.7.3",
+    "react-modal": "^1.6.3",
     "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
     "react-router-redux": "^4.0.5",
