--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router": "^2.7.0",
     "react-router-redux": "^4.0.5",
     "react-scripts": "1.0.14",
+    "react-star-rating-component": "^1.2.2",
     "redux": "^3.5.2",
     "redux-devtools-extension": "^2.13.0",
     "redux-form": "^5.3.2",
