--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^15.1.0",
     "react-dropzone": "^3.7.3",
     "react-modal": "^1.6.3",
+    "react-radio-group": "^3.0.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
     "react-router-redux": "^4.0.5",
