--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "axios": "^0.12.0",
     "moment": "2.18.1",
     "react": "^15.4.2",
+    "react-addons-create-fragment": "^15.3.2",
+    "react-addons-shallow-compare": "^15.3.2",
     "react-autosuggest": "^7.0.1",
     "react-bootstrap": "^0.30.3",
     "react-bootstrap-date-picker": "^4.0.0",
+    "react-dates": "^4.1.1",
     "react-dom": "^15.1.0",
     "react-dropzone": "^3.7.3",
     "react-modal": "^1.6.3",
+    "react-moment-proptypes": "^1.2.0",
     "react-radio-group": "^3.0.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
@@ -32,5 +36,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "resolutions": {
+    "react-moment-proptypes/moment": "2.18.1"
+  }
 }
